@@ -3,11 +3,14 @@ import rege.reader.infra.*;
 
 import org.junit.jupiter.api.Test;
 import rege.syntax.model.Expression;
+import rege.syntax.model.Union;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Tests for RegeReaderLeft error reporting with ParseResult.
  */
+@SuppressWarnings({"unchecked", "rawtypes"})
 class RegeReaderLeftErrorTest {
     
     @Test
@@ -50,7 +53,7 @@ class RegeReaderLeftErrorTest {
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
         assertEquals(1, failure.errors().size());
-        assertTrue(failure.errors().get(0).message().contains("Unclosed token"));
+        assertTrue(failure.errors().getFirst().message().contains("Unclosed token"));
     }
     
     @Test
@@ -59,7 +62,7 @@ class RegeReaderLeftErrorTest {
         
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
-        assertTrue(failure.errors().get(0).message().contains("Expected '['"));
+        assertTrue(failure.errors().getFirst().message().contains("Expected '['"));
     }
     
     @Test
@@ -68,7 +71,7 @@ class RegeReaderLeftErrorTest {
         
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
-        assertTrue(failure.errors().get(0).message().contains("Unclosed parenthesis"));
+        assertTrue(failure.errors().getFirst().message().contains("Unclosed parenthesis"));
     }
     
     @Test
@@ -77,7 +80,7 @@ class RegeReaderLeftErrorTest {
         
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
-        assertTrue(failure.errors().get(0).message().contains("Unexpected trailing"));
+        assertTrue(failure.errors().getFirst().message().contains("Unexpected trailing"));
     }
     
     @Test
@@ -86,7 +89,7 @@ class RegeReaderLeftErrorTest {
         
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
-        assertTrue(failure.errors().get(0).message().contains("Unexpected character"));
+        assertTrue(failure.errors().getFirst().message().contains("Unexpected character"));
     }
     
     @Test
@@ -102,7 +105,7 @@ class RegeReaderLeftErrorTest {
         
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
-        assertTrue(failure.errors().get(0).message().contains("after union operator"));
+        assertTrue(failure.errors().getFirst().message().contains("after union operator"));
     }
     
     @Test
@@ -111,7 +114,7 @@ class RegeReaderLeftErrorTest {
         
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
-        assertTrue(failure.errors().get(0).message().contains("after concatenation operator"));
+        assertTrue(failure.errors().getFirst().message().contains("after concatenation operator"));
     }
     
     @Test
@@ -120,7 +123,7 @@ class RegeReaderLeftErrorTest {
         
         assertTrue(result.isFailure());
         ParseResult.Failure<Expression> failure = (ParseResult.Failure) result;
-        ParseError error = failure.errors().get(0);
+        ParseError error = failure.errors().getFirst();
         
         // Error should be somewhere in the input
         assertTrue(error.range().start().offset() >= 0);
@@ -168,7 +171,7 @@ class RegeReaderLeftErrorTest {
     @Test
     void testMapSuccess() {
         ParseResult<Expression> result = RegeReaderLeft.parse("τ[a]");
-        ParseResult mapped = result.map(expr -> expr.star());
+        ParseResult mapped = result.map(Expression::star);
         
         assertTrue(mapped.isSuccess());
     }
@@ -176,7 +179,7 @@ class RegeReaderLeftErrorTest {
     @Test
     void testMapFailure() {
         ParseResult<Expression> result = RegeReaderLeft.parse("τ[unclosed");
-        ParseResult mapped = result.map(expr -> expr.star());
+        ParseResult mapped = result.map(Expression::star);
         
         assertTrue(mapped.isFailure());
         assertEquals(result, mapped);
@@ -191,9 +194,9 @@ class RegeReaderLeftErrorTest {
         Expression expr = ((ParseResult.Success<Expression>) result).value();
         
         // Should be ((a|b)|c) - left associative
-        assertTrue(expr instanceof rege.syntax.model.Union);
+        assertInstanceOf(Union.class, expr);
         rege.syntax.model.Union outerUnion = (rege.syntax.model.Union) expr;
-        assertTrue(outerUnion.lhs() instanceof rege.syntax.model.Union);
+        assertInstanceOf(Union.class, outerUnion.lhs());
     }
     
     // ============================================================================
@@ -222,7 +225,7 @@ class RegeReaderLeftErrorTest {
         
         if (result2 instanceof ParseResult.Failure<Expression> failure) {
             assertEquals(1, failure.errors().size());
-            assertEquals("Lowercase letters only", failure.errors().get(0).message());
+            assertEquals("Lowercase letters only", failure.errors().getFirst().message());
         }
     }
     
@@ -240,7 +243,7 @@ class RegeReaderLeftErrorTest {
         
         if (result2 instanceof ParseResult.Failure<Expression> failure) {
             // Should have at least one validation error
-            assertTrue(failure.errors().size() >= 1);
+            assertFalse(failure.errors().isEmpty());
             boolean hasAlphanumericError = failure.errors().stream()
                 .anyMatch(e -> e.message().contains("Alphanumeric"));
             assertTrue(hasAlphanumericError, "Should have alphanumeric validation error");
